# sd-spider-utils

./: README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
sd_spider_utils/: Skill.md  __init__.py  common_utils.py  data_utils.py  datetime_utils.py  dp_utils.py  middlewares.py  parse_utils.py  request_utils.py  spider_demos.py  text_utils.py
sd_spider_utils/templates/spiders/: spider.tmpl
tests/: test_dp_utils.py  test_middlewares.py  test_request_utils.py  test_utils.py
