[project]
name = "sd_spider_utils"
version = "1.0.7"
description = "爬虫工具包，写爬虫更快！！！"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "星梦", email = "cpython666@gmail.com" },
]
urls = { Homepage = "https://space.bilibili.com/1909782963" }
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12,<5",
]

classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
excel = [
    "pandas>=2,<3",
    "openpyxl>=3.1,<4",
]
xpath = ["lxml>=4.9,<7"]
scrapy = ["Scrapy>=2.16,<3"]
drissionpage = [
    "Scrapy>=2.16,<3",
    "DrissionPage>=4.1.1.4,<5",
]
requests-go = [
    "Scrapy>=2.16,<3",
    "requests-go>=1.0.9,<2",
]
curl-cffi = [
    "Scrapy>=2.16,<3",
    "curl-cffi>=0.11.4,<1",
]
scrapling = [
    "Scrapy>=2.16,<3",
    "scrapling[fetchers]>=0.4.9,<0.5",
]
all = [
    "pandas>=2,<3",
    "openpyxl>=3.1,<4",
    "lxml>=4.9,<7",
    "Scrapy>=2.16,<3",
    "DrissionPage>=4.1.1.4,<5",
    "requests-go>=1.0.9,<2",
    "curl-cffi>=0.11.4,<1",
    "scrapling[fetchers]>=0.4.9,<0.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
